# openflow-regulatory-reporting-demo

./: .gitignore  AGENTS.md  LICENSE  README.md
credentials/: README.md
credentials/truststores/: README.md
custom_processors/PrepareRegulatoryFile/: BUILD.md  README.md  pyproject.toml
custom_processors/PrepareRegulatoryFile/src/prepare_regulatory_file/: PrepareRegulatoryFile.py
custom_processors/nifi-dgoj-xades-nar/: README.md  pom.xml
flow/: BatchProcessing.json  BoeGamingReport.json  FetchRegulatoryReferences.json  GenerateTransactions.json
semantic_view_creation/: gaming_pipeline_analytics_fastgen_config.json  gaming_pipeline_analytics_metadata.json  gaming_pipeline_analytics_semantic_model.yaml
setup/: 01_ARCHITECTURE.md  01_SNOWFLAKE_SETUP.md  01_snowflake_setup.sql  02_CREDENTIALS_SETUP.md  02_DEPLOYMENT.md  03_INFRASTRUCTURE_INVENTORY.md  03_SFTP_SETUP.md  04_PROCESSOR_SETUP.md  04_TEARDOWN.md  05_OPENFLOW_SETUP.md  FLOW_PARAMETERS.md  schema_GeneratePokerTransactions.json
source_documents/: DGOJ_Monitorizacion_3.3.xsd
specifications/: 01_extract_specifications.sql  02_FULL_SPECIFICATIONS.md  02a_DATA_MODEL.md  02b_TECHNICAL_SPECS.md  03_EXTRACTION_ASSESSMENT.md  04_DEMO_SPECIFICATIONS.md  05_COMPLIANCE.md
sql/: 00_set_variables.sql  01_database_schema.sql  02_grants.sql  03_tables.sql  04_functions.sql  05_procedures.sql  06_cdc_setup.sql  07_dynamic_table.sql  08_stream.sql  09_views.sql  README.md  run_sql.sh
streamlit/: README.md  pipeline_monitor.py  snowflake.yml
testing/: VALIDATION.md
(+1 files in other folders)
